apps/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: servarr
  labels:
    app.kubernetes.io/name: jellyseerr
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.kennyandries.com
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: jellyseerr.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
